--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -165,29 +165,45 @@ jobs:
           AWS_REGION: ${{ steps.awsinfo.outputs.AWS_REGION }}
         run: |
           set -euo pipefail
+
+          # Discover account/region (already set earlier in the job; keep if present)
+          ACCOUNT_ID="${ACCOUNT_ID:-$(aws sts get-caller-identity --query Account --output text)}"
+          AWS_REGION="${AWS_REGION:-${{ env.AWS_REGION }}}"
+
+          # Compute names
           STATE_BUCKET="akara-tf-state-${ACCOUNT_ID}-${AWS_REGION}"
           LOCK_TABLE="akara-tf-locks-${ACCOUNT_ID}-${AWS_REGION}"
-          
-          echo "Creating backend resources:"
-          echo "  Account: $ACCOUNT_ID"
-          echo "  Region: $AWS_REGION"
-          echo "  Bucket: $STATE_BUCKET"
-          echo "  Table: $LOCK_TABLE"
-          
+
+          # Export to the whole job so later steps can read them (prevents 'unbound variable')
+          echo "STATE_BUCKET=${STATE_BUCKET}" >> "$GITHUB_ENV"
+          echo "LOCK_TABLE=${LOCK_TABLE}"   >> "$GITHUB_ENV"
+
+          echo "Using STATE_BUCKET=${STATE_BUCKET}"
+          echo "Using LOCK_TABLE=${LOCK_TABLE}"
+
+          # Create state bucket if missing
           if ! aws s3api head-bucket --bucket "$STATE_BUCKET" 2>/dev/null; then
             if [ "$AWS_REGION" = "us-east-1" ]; then
               aws s3api create-bucket --bucket "$STATE_BUCKET"
             else
-              aws s3api create-bucket --bucket "$STATE_BUCKET" --create-bucket-configuration LocationConstraint="$AWS_REGION"
+              aws s3api create-bucket --bucket "$STATE_BUCKET" \
+                --region "$AWS_REGION" \
+                --create-bucket-configuration LocationConstraint="$AWS_REGION"
             fi
             aws s3api put-bucket-versioning --bucket "$STATE_BUCKET" --versioning-configuration Status=Enabled
             aws s3api put-public-access-block --bucket "$STATE_BUCKET" --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
           fi
-          aws dynamodb describe-table --table-name "$LOCK_TABLE" >/dev/null 2>&1 || \
-            aws dynamodb create-table --table-name "$LOCK_TABLE" \
+
+          # Create/ensure DynamoDB lock table
+          if ! aws dynamodb describe-table --table-name "$LOCK_TABLE" >/dev/null 2>&1; then
+            aws dynamodb create-table \
+              --table-name "$LOCK_TABLE" \
+              --billing-mode PAY_PER_REQUEST \
               --attribute-definitions AttributeName=LockID,AttributeType=S \
-              --key-schema AttributeName=LockID,KeyType=HASH \
-              --billing-mode PAY_PER_REQUEST
+              --key-schema AttributeName=LockID,KeyType=HASH
+            # wait for ACTIVE
+            aws dynamodb wait table-exists --table-name "$LOCK_TABLE"
+          fi
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
