feat: add fail-safe variables and Phase 1 output capture for reliable Lambda deployment
Terraform Variables:
- Add assets_bucket_name and catalog_table_name override variables
- Default to null, allowing coalesce() to use computed values or overrides
- Enables two-phase deployment with explicit Phase 1 → Phase 2 value passing

Lambda Environment Variables:
- Use coalesce() for ASSETS_BUCKET and CATALOG_TABLE environment variables
- Prefers explicit variable overrides, falls back to computed resource attributes
- Add IAM role and policy dependencies to all Lambda functions
- Ensures IAM resources exist before Lambda creation

GitHub Actions Two-Phase Deployment:
- Add 'Capture Phase 1 outputs' step after infra apply
- Export ASSETS_BUCKET_NAME and CATALOG_TABLE_NAME to GITHUB_ENV
- Add comprehensive sanity check before Phase 2 (variables + ZIPs)
- Pass captured values as explicit -var flags to Phase 2 plan
- Verify ZIP files exist and contain index.js before Lambda deployment

Benefits:
- Eliminates InvalidParameterValueException for Lambda environment variables
- Provides concrete string values instead of potentially null resource attributes
- Adds comprehensive verification steps to catch issues early
- Creates reliable deployment pipeline with proper phase separation

Resolves:
- Lambda environment variable configuration errors
- Race conditions between resource creation and Lambda deployment
- Missing ZIP file errors during Lambda function creation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -336,6 +336,17 @@ jobs:
           set -euxo pipefail
           terraform -chdir=infra/terraform apply -input=false -no-color -lock-timeout=10m plan.infra.out
 
+      - name: Capture Phase 1 outputs (bucket/table)
+        run: |
+          set -euo pipefail
+          terraform -chdir=infra/terraform output -raw assets_bucket_name     | tee /tmp/assets_bucket.txt
+          terraform -chdir=infra/terraform output -raw catalog_table_name     | tee /tmp/catalog_table.txt
+          echo "ASSETS_BUCKET_NAME=$(cat /tmp/assets_bucket.txt)"   >> $GITHUB_ENV
+          echo "CATALOG_TABLE_NAME=$(cat /tmp/catalog_table.txt)"   >> $GITHUB_ENV
+          echo "Captured:"
+          echo "  ASSETS_BUCKET_NAME=$ASSETS_BUCKET_NAME"
+          echo "  CATALOG_TABLE_NAME=$CATALOG_TABLE_NAME"
+
       - name: Sanity check env sources
         run: |
           set -euxo pipefail
@@ -343,12 +354,27 @@ jobs:
           terraform -chdir=infra/terraform output -raw assets_bucket_name || true
           terraform -chdir=infra/terraform output -raw catalog_table_name || true
 
+      - name: Sanity check Phase 1 materialized names
+        run: |
+          set -euo pipefail
+          test -n "${ASSETS_BUCKET_NAME:-}" || (echo "ASSETS_BUCKET_NAME missing"; exit 1)
+          test -n "${CATALOG_TABLE_NAME:-}" || (echo "CATALOG_TABLE_NAME missing"; exit 1)
+          ls -lah infra/terraform || true
+          for z in get_upload_url.zip get_catalog.zip post_catalog.zip; do
+            if [ ! -f "infra/terraform/$z" ]; then
+              echo "Missing ZIP: infra/terraform/$z"; exit 1
+            fi
+            unzip -l "infra/terraform/$z" | sed -n '1,20p'
+          done
+
       - name: Terraform plan (lambdas phase)
         run: |
           set -euxo pipefail
           terraform -chdir=infra/terraform plan -input=false -no-color \
             -lock-timeout=10m \
             -var="acm_certificate_arn=${ACM_CERT_ARN}" \
+            -var="assets_bucket_name=${ASSETS_BUCKET_NAME}" \
+            -var="catalog_table_name=${CATALOG_TABLE_NAME}" \
             -target=aws_lambda_function.get_upload_url \
             -target=aws_lambda_function.get_catalog \
             -target=aws_lambda_function.post_catalog \
