fix(admin): convert auth callback to pure client component for static export compatibility
Key Changes:
- Remove 'dynamic = force-dynamic' export (incompatible with static export)
- Keep 'revalidate = false' (valid for static export)
- Make page client-only with 'use client' directive
- Consolidate all logic into single page component
- Delete separate CallbackClient.tsx (no longer needed)
- Add automatic redirect to /upload after successful auth

Static Export Compatibility:
- Pages marked dynamic = 'force-dynamic' cannot be statically exported
- Client-only pages with no server flags work perfectly with output: 'export'
- Next.js generates static HTML shell and hydrates on client
- Perfect for OAuth callback pages that only read query params

CI/CD Improvements:
- Add cache cleaning steps before frontend/admin builds
- Clear .next and node_modules/.cache to avoid stale artifacts
- Prevents build issues from previous runs

Benefits:
- Resolves Next.js static export incompatibility
- Maintains OAuth callback functionality
- Cleaner component architecture (single file)
- More reliable CI/CD builds with cache clearing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -484,6 +484,11 @@ jobs:
           echo "COGNITO_CLIENT_ID=$(jq -r .cognito_user_pool_client_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "AWS_REGION_OUTPUT=$(jq -r .aws_region.value infrastructure-outputs.json)" >> $GITHUB_ENV
 
+      - name: Clean Next caches (frontend)
+        working-directory: frontend
+        run: |
+          rm -rf .next node_modules/.cache || true
+
       - name: Build Frontend
         working-directory: frontend
         env:
@@ -601,6 +606,11 @@ jobs:
           echo "COGNITO_USER_POOL_ID=$(jq -r .cognito_user_pool_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "COGNITO_CLIENT_ID=$(jq -r .cognito_user_pool_client_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "AWS_REGION_OUTPUT=$(jq -r .aws_region.value infrastructure-outputs.json)" >> $GITHUB_ENV
+
+      - name: Clean Next caches (admin)
+        working-directory: admin
+        run: |
+          rm -rf .next node_modules/.cache || true
 
       - name: Build Admin
         working-directory: admin
