Fix CI caching paths and Next.js revalidate for /auth/callback (static export safe)
Cache Path Fixes:
- Fix all workflow cache-dependency-path to use root 'package-lock.json'
- Remove invalid paths like 'frontend/package-lock.json', 'admin/package-lock.json'
- Standardize Node.js setup with actions/setup-node@v4 and correct caching
- Add proper cache cleaning steps before builds (rm -rf .next node_modules/.cache)
- Move cache cleaning to correct positions (before install, not before build)

Next.js Revalidate Fixes:
- Move 'export const revalidate = false' after imports in auth callback
- Simplify auth callback logic with cleaner error handling
- Remove redundant message state and complex conditional rendering
- Ensure static export compatibility (no dynamic = 'force-dynamic')
- Add proper white text color for better visibility

Benefits:
- Eliminates 'Some specified paths were not resolved' cache warnings
- Fixes Next.js 'Invalid revalidate value' errors during static export
- Cleaner, more reliable CI/CD builds with proper dependency caching
- Simplified auth callback component with better UX
- Maintains OAuth functionality while being static export safe

All workflows (deploy.yml, admin-deploy.yml, frontend-deploy.yml) now use:
- Correct package-lock.json path (root level)
- Proper cache cleaning before installs
- Simplified dependency installation (npm ci only)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -453,20 +453,21 @@ jobs:
             echo "lockfile=" >> $GITHUB_OUTPUT
           fi
 
-      - name: Setup Node.js (root workspace)
+      - name: Setup Node.js (frontend)
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: ${{ steps.detect_root_pm.outputs.pm }}
-          cache-dependency-path: ${{ steps.detect_root_pm.outputs.lockfile }}
+          node-version: ${{ env.NODE_VERSION || '20' }}
+          cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
 
-      - name: Install workspace deps
+      - name: Clean frontend caches
+        working-directory: frontend
         run: |
-          if [ "${{ steps.detect_root_pm.outputs.pm }}" = "npm" ]; then
-            npm ci
-          else
-            yarn install --frozen-lockfile
-          fi
+          rm -rf .next node_modules/.cache || true
+
+      - name: Install deps (frontend)
+        working-directory: frontend
+        run: npm ci
 
       - name: Download infra outputs
         uses: actions/download-artifact@v4
@@ -483,11 +484,6 @@ jobs:
           echo "COGNITO_USER_POOL_ID=$(jq -r .cognito_user_pool_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "COGNITO_CLIENT_ID=$(jq -r .cognito_user_pool_client_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "AWS_REGION_OUTPUT=$(jq -r .aws_region.value infrastructure-outputs.json)" >> $GITHUB_ENV
-
-      - name: Clean Next caches (frontend)
-        working-directory: frontend
-        run: |
-          rm -rf .next node_modules/.cache || true
 
       - name: Build Frontend
         working-directory: frontend
@@ -576,20 +572,21 @@ jobs:
             echo "lockfile=" >> $GITHUB_OUTPUT
           fi
 
-      - name: Setup Node.js (root workspace)
+      - name: Setup Node.js (admin)
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: ${{ steps.detect_root_pm_admin.outputs.pm }}
-          cache-dependency-path: ${{ steps.detect_root_pm_admin.outputs.lockfile }}
+          node-version: ${{ env.NODE_VERSION || '20' }}
+          cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
 
-      - name: Install workspace deps
+      - name: Clean admin caches
+        working-directory: admin
         run: |
-          if [ "${{ steps.detect_root_pm_admin.outputs.pm }}" = "npm" ]; then
-            npm ci
-          else
-            yarn install --frozen-lockfile
-          fi
+          rm -rf .next node_modules/.cache || true
+
+      - name: Install deps (admin)
+        working-directory: admin
+        run: npm ci
 
       - name: Download infra outputs
         uses: actions/download-artifact@v4
@@ -606,11 +603,6 @@ jobs:
           echo "COGNITO_USER_POOL_ID=$(jq -r .cognito_user_pool_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "COGNITO_CLIENT_ID=$(jq -r .cognito_user_pool_client_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "AWS_REGION_OUTPUT=$(jq -r .aws_region.value infrastructure-outputs.json)" >> $GITHUB_ENV
-
-      - name: Clean Next caches (admin)
-        working-directory: admin
-        run: |
-          rm -rf .next node_modules/.cache || true
 
       - name: Build Admin
         working-directory: admin
