--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -37,9 +37,11 @@ jobs:
           npm run type-check
 
       - name: Lint
+        env:
+          CI: true
         run: |
           cd frontend
-          npm run lint
+          npm run lint --silent || npx next lint --no-watch --max-warnings=0 --dir .
 
       - name: Build
         run: |
