--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.7"
   },
   "engines": {
     "node": ">=18.0.0",
